test/invalid/params.anf
mod params {
    def broken(1, 3) {}
}
